--- a/test/test.html
+++ b/test/test.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="vendor/jquery.js"></script>
   <script type="text/javascript" src="vendor/qunit.js"></script>
   <script type="text/javascript" src="vendor/underscore.js"></script>
+  <script type="text/javascript" src="vendor/underscore-awesomer.js"></script>
   <script type="text/javascript" src="vendor/backbone.js"></script>
   <script type="text/javascript" src="../backbone-articulation.js"></script>
 
