--- a/test/test.html
+++ b/test/test.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Backbone Test Suite</title>
-  <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="vendor/jquery.js"></script>
-  <script type="text/javascript" src="vendor/qunit.js"></script>
+  <link rel="stylesheet" href="vendor/qunit/qunit.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="vendor/qunit/jquery.js"></script>
+  <script type="text/javascript" src="vendor/qunit/qunit.js"></script>
+
   <script type="text/javascript" src="vendor/underscore.js"></script>
   <script type="text/javascript" src="vendor/underscore-awesomer.js"></script>
   <script type="text/javascript" src="vendor/backbone.js"></script>
-  <script type="text/javascript" src="vendor/backbone-relational.js"></script>
+  <script type="text/javascript" src="../backbone-relational-kmalakoff.js"></script>
   <script type="text/javascript" src="../backbone-articulation.js"></script>
 
   <script type="text/javascript" src="model.js"></script>
