--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
 
   <script type="text/javascript" src="vendor/underscore.js"></script>
   <script type="text/javascript" src="vendor/underscore-awesomer.js"></script>
-  <script type="text/javascript" src="vendor/backbone.js"></script>
+  <script type="text/javascript" src="../backbone-kmalakoff.js"></script>
   <script type="text/javascript" src="../backbone-relational-kmalakoff.js"></script>
   <script type="text/javascript" src="../backbone-articulation.js"></script>
 
