--- a/test/test_relational.html
+++ b/test/test_relational.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Backbone Test Suite</title>
+  <title>Backbone Test Suite - Backbone.Relational</title>
   <link rel="stylesheet" href="vendor/qunit/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="vendor/qunit/qunit.js"></script>
@@ -9,13 +9,13 @@
   <script type="text/javascript" src="vendor/underscore.js"></script>
   <script type="text/javascript" src="vendor/underscore-awesomer.js"></script>
   <script type="text/javascript" src="../backbone-kmalakoff.js"></script>
+  <script type="text/javascript" src="../backbone-relational-kmalakoff.js"></script>
   <script type="text/javascript" src="../backbone-articulation.js"></script>
 
-  <script type="text/javascript" src="model.js"></script>
-  <script type="text/javascript" src="collection.js"></script>
+  <script type="text/javascript" src="relational.js"></script>
 </head>
 <body>
-  <h1 id="qunit-header">Backbone-Articulation Test Suite</h1>
+  <h1 id="qunit-header">Backbone-Articulation Test Suite - Backbone.Relational</h1>
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
