Big changes: removed need for modified versions of Backbone.js and Backbone-Articulation.js (monkey patched inside Backbone.Articulation), upgraded to use Lifecyle.js and JSON-Serialization.js (which provided built-in Dates serialization/deserialization) instead of underscore-awesomer.js, now provides a bundeled version (with Lifecyle.js and JSON-Serialization.js) called backbone-articulation.js and unbundled version called backbone-articulation_core.js.

--- a/test/test_relational.html
+++ b/test/test_relational.html
@@ -6,10 +6,11 @@
   <script type="text/javascript" src="vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="vendor/qunit/qunit.js"></script>
 
-  <script type="text/javascript" src="vendor/underscore.js"></script>
-  <script type="text/javascript" src="vendor/underscore-awesomer.js"></script>
-  <script type="text/javascript" src="../backbone-kmalakoff.js"></script>
-  <script type="text/javascript" src="../backbone-relational-kmalakoff.js"></script>
+  <script type="text/javascript" src="../dependencies/underscore.js"></script>
+  <script type="text/javascript" src="../dependencies/backbone.js"></script>
+  <script type="text/javascript" src="../dependencies/backbone-relational.js"></script>
+  <script type="text/javascript" src="../dependencies/json-serialize.js"></script>
+  <script type="text/javascript" src="../dependencies/lifecycle.js"></script>
   <script type="text/javascript" src="../backbone-articulation.js"></script>
 
   <script type="text/javascript" src="relational.js"></script>
