Upgraded to easy-bake, added packaging tests, and re-wrote in CoffeeScript

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -3,8 +3,6 @@
 <head>
   <title>Backbone.Articulation.js Test Suite - All Tests</title>
   <link rel="stylesheet" href="vendor/qunit/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="vendor/qunit/qunit.js"></script>
   <style type="text/css">
      iframe, body {height: 100%; padding:0; margin: 0;}
      iframe {float: left;}
@@ -15,8 +13,12 @@
 <body>
   <div class="test-block">
     <h1 class="qunit-header">Backbone.Articulation.js Test Suite - All Tests</h1>
-    <iframe src="test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="test_relational.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="core/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="core/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="core/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone-relational/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
