Mid-implementation of mixin

--- a/test/packaging/test-latest.html
+++ b/test/packaging/test-latest.html
@@ -11,6 +11,8 @@
 
   <script type="text/javascript" src="../core/model.js"></script>
   <script type="text/javascript" src="../core/collection.js"></script>
+  <script type="text/javascript" src="../backbone-relational/test.js"></script>
+  <script type="text/javascript" src="../mixin/build/test.js"></script>
 </head>
 <body>
   <div>
