--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -17,6 +17,7 @@
     <iframe src="core/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="core/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone-relational/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="mixin/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
   </div>
