Split out Backbone.Relational support to an optional library

--- a/test/backbone-relational/test.html
+++ b/test/backbone-relational/test.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="../../vendor/lifecycle-latest.js"></script>
 
   <script type="text/javascript" src="../../backbone-articulation.js"></script>
+  <script type="text/javascript" src="../../lib/backbone-articulation-backbone-relational.js"></script>
 
   <script type="text/javascript" src="test.js"></script>
 </head>
