Added Lo-Dash support

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -20,6 +20,7 @@
     <iframe src="mixin/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="lodash/test.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
