Updated to easy-bake 0.1.4

--- a/test/lodash/test.html
+++ b/test/lodash/test.html
@@ -9,8 +9,10 @@
 
   <script type="text/javascript" src="build/bundle-lodash.js"></script>
 
-  <script type="text/javascript" src="model.js"></script>
-  <script type="text/javascript" src="collection.js"></script>
+  <script type="text/javascript" src="../core/model.js"></script>
+  <script type="text/javascript" src="../core/collection.js"></script>
+  <script type="text/javascript" src="../backbone-relational/test.js"></script>
+  <script type="text/javascript" src="../mixin/build/test.js"></script>
 </head>
 <body>
   <div>
