--- a/test/backbone-relational/test.html
+++ b/test/backbone-relational/test.html
@@ -6,11 +6,11 @@
   <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
 
-  <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-relational-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/json-serialize-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/lifecycle-latest.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-relational-0.6.0.js"></script>
+  <script type="text/javascript" src="../../vendor/json-serialize-1.1.1.js"></script>
+  <script type="text/javascript" src="../../vendor/lifecycle-1.0.1.js"></script>
 
   <script type="text/javascript" src="../../backbone-articulation.js"></script>
   <script type="text/javascript" src="../../lib/backbone-articulation-backbone-relational.js"></script>
