--- a/test/core/test-latest.html
+++ b/test/core/test-latest.html
@@ -6,10 +6,10 @@
   <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
 
-  <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/json-serialize-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/lifecycle-latest.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
+  <script type="text/javascript" src="../../vendor/json-serialize-1.1.1.js"></script>
+  <script type="text/javascript" src="../../vendor/lifecycle-1.0.1.js"></script>
 
   <script type="text/javascript" src="../../backbone-articulation.js"></script>
 
