--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -15,8 +15,10 @@
     <h1 class="qunit-header">Backbone.Articulation.js Test Suite - All Tests</h1>
     <iframe src="core/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="core/test-latest.min.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="core/test-latest-amd.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="core/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone-relational/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone-relational/test-amd.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="mixin/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
