--- a/test/backbone-relational/test.html
+++ b/test/backbone-relational/test.html
@@ -9,13 +9,13 @@
   <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-relational-0.6.0.js"></script>
-  <script type="text/javascript" src="../../vendor/json-serialize-1.1.1.js"></script>
-  <script type="text/javascript" src="../../vendor/lifecycle-1.0.1.js"></script>
+  <script type="text/javascript" src="../../vendor/json-serialize-1.1.2.js"></script>
+  <script type="text/javascript" src="../../vendor/lifecycle-1.0.2.js"></script>
 
   <script type="text/javascript" src="../../backbone-articulation.js"></script>
   <script type="text/javascript" src="../../lib/backbone-articulation-backbone-relational.js"></script>
 
-  <script type="text/javascript" src="test.js"></script>
+  <script type="text/javascript" src="build/test.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">Backbone-Articulation Test Suite - Backbone.Relational</h1>
