--- a/test/core/test-latest-amd.html
+++ b/test/core/test-latest-amd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Backbone-ModelRef.js Test Suite (AMD)</title>
+  <title>Backbone-Articulation.js Test Suite (AMD)</title>
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
@@ -14,18 +14,18 @@
         'underscore': "../../vendor/underscore-1.3.3",
         'backbone': "../../vendor/backbone-0.9.2",
         'json-serialize': "../../vendor/json-serialize-1.1.2",
-        'lifecycle': "../../vendor/lifecycle-1.0.1",
-        'backbone-relational': "../../vendor/backbone-relational-0.6.0",
+        'lifecycle': "../../vendor/lifecycle-1.0.2",
         'backbone-articulation': "../../backbone-articulation"
       }
     });
   </script>
 
-  <script type="text/javascript" src="build/test-amd.js"></script>
+  <script type="text/javascript" src="build/test-collection-amd.js"></script>
+  <script type="text/javascript" src="build/test-model-amd.js"></script>
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Backbone-ModelRef.js Test Suite (AMD)</h1>
+    <h1 id="qunit-header">Backbone-Articulation.js Test Suite (AMD)</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
