--- a/test/core/test-latest.html
+++ b/test/core/test-latest.html
@@ -8,13 +8,13 @@
 
   <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
-  <script type="text/javascript" src="../../vendor/json-serialize-1.1.1.js"></script>
-  <script type="text/javascript" src="../../vendor/lifecycle-1.0.1.js"></script>
+  <script type="text/javascript" src="../../vendor/json-serialize-1.1.2.js"></script>
+  <script type="text/javascript" src="../../vendor/lifecycle-1.0.2.js"></script>
 
   <script type="text/javascript" src="../../backbone-articulation.js"></script>
 
-  <script type="text/javascript" src="model.js"></script>
-  <script type="text/javascript" src="collection.js"></script>
+  <script type="text/javascript" src="build/test-model.js"></script>
+  <script type="text/javascript" src="build/test-collection.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">Backbone-Articulation Test Suite</h1>
