--- a/test/packaging/test-legacy.html
+++ b/test/packaging/test-legacy.html
@@ -9,8 +9,8 @@
 
   <script type="text/javascript" src="build/bundle-legacy.js"></script>
 
-  <script type="text/javascript" src="../core/model.js"></script>
-  <script type="text/javascript" src="../core/collection.js"></script>
+  <script type="text/javascript" src="../core/build/test-model.js"></script>
+  <script type="text/javascript" src="../core/build/test-collection.js"></script>
 </head>
 <body>
   <div>
