--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Backbone.Articulation.js Test Suite - All Tests</title>
-  <link rel="stylesheet" href="vendor/qunit/qunit.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <style type="text/css">
      iframe, body {height: 100%; padding:0; margin: 0;}
      iframe {float: left;}
