--- a/test/core/test-legacy.html
+++ b/test/core/test-legacy.html
@@ -2,16 +2,19 @@
 <html>
 <head>
   <title>Backbone-Articulation Test Suite</title>
-  <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
 
-  <script type="text/javascript" src="../../vendor/underscore-1.4.2.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-0.9.2.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore-1.4.4.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-1.0.0.js"></script>
   <script type="text/javascript" src="../../vendor/json-serialize-1.1.2.js"></script>
   <script type="text/javascript" src="../../vendor/lifecycle-1.0.2.js"></script>
 
   <script type="text/javascript" src="../../backbone-articulation.js"></script>
+
+  <!-- TESTS -->
+  <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit_test_runner.js"></script>
 
   <script type="text/javascript" src="build/test-model.js"></script>
   <script type="text/javascript" src="build/test-collection.js"></script>
@@ -21,6 +24,5 @@
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
-  <script type="text/javascript">QUnit.done = function(failures, total) {if (!total) { $('#qunit-banner').removeClass('qunit-pass').addClass('qunit-fail'); throw 'Warning: no tests run'}}</script>
 </body>
 </html>
