--- a/test/packaging/test-legacy.html
+++ b/test/packaging/test-legacy.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Backbone-Articulation.js Test Suite - Packaging</title>
-  <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
-  <script type="text/javascript" src="../vendor/qunit/jslitmus.js"></script>
 
   <script type="text/javascript" src="build/bundle-legacy.js"></script>
+
+  <!-- TESTS -->
+  <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="../../vendor/test/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
+  <script type="text/javascript" src="../../vendor/test/qunit/qunit_test_runner.js"></script>
 
   <script type="text/javascript" src="../core/build/test-model.js"></script>
   <script type="text/javascript" src="../core/build/test-collection.js"></script>
@@ -20,6 +22,5 @@
     <ol id="qunit-tests"></ol>
     <br />
   </div>
-  <script type="text/javascript">QUnit.done = function(failures, total) {if (!total) { $('#qunit-banner').removeClass('qunit-pass').addClass('qunit-fail'); throw 'Warning: no tests run'}}</script>
 </body>
 </html>
